app/test-web.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: django
  namespace: tektontest
spec:
  replicas: 2
  selector:
    app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - name: django
          image: django:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - django
        from:
          kind: ImageStreamTag
          name: quizapp:latest
    - type: ConfigChange
