app/test-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  namespace: tektontest
spec:
  selector:
    app: django
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8000
